[package]
name = "reverse-lines"
version = "0.1.1"
description = "Rust Iterator for reading files line by line with a buffer in reverse"
repository = "https://github.com/Elizafox/reverse_lines"
documentation = "https://docs.rs/reverse_lines"
license = "MIT"
authors = ["Elizabeth Myers <elizabeth.jennifer.myers@gmail.com>"]
keywords = ["lines", "reverse", "reader", "buffer", "iterator"]
edition = "2021"

[dev-dependencies]
assert_matches = "1.5.0"

[dependencies]
